Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added the st2rest utility script for converting wiki pages using the
  structuredtext syntax into wiki pages using the reStructuredText syntax.
  This script is contributed by Laurent Pelecq <laurent.pelecq@soleil.org>
Bug fixes:
~~~~~~~~~~
- Made CPSWiki fully take advantage of the CPSUtil.id.generatedId method now
  fixed.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Moved product skin in skins/cps_wiki and ZMI pages in zmi as it should be.
- Renamed ZPT files so they have the .pt suffix as they should have, instead of
  the .zpt suffix.